--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,8 @@ copyright = "&copy; 2017 Your Name"
 theme = "hugo-academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
+#Relative urls
+relativeurls = true
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
