--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.com/"  # End your URL with a `/` trailing slash.
+baseurl = "http://upholsterer-stares-24453.netlify.com/"  # End your URL with a `/` trailing slash.
 title = "Anh Hoang Duc"
 copyright = "&copy; 2017 Your Name"
 theme = "hugo-academic"
