--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-baseurl = "http://upholsterer-stares-24453.netlify.com/"  # End your URL with a `/` trailing slash.
+baseurl = "http://upholsterer-stares-24453.netlify.com/post/"  # End your URL with a `/` trailing slash.
 title = "Anh Hoang Duc"
 copyright = "&copy; 2017 Your Name"
 theme = "hugo-academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 #Relative urls
-relativeurls = true
+#relativeurls = true
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
