--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-baseurl = "http://upholsterer-stares-24453.netlify.com/post/"  # End your URL with a `/` trailing slash.
+baseurl = "anhhoangduc.com"  # End your URL with a `/` trailing slash.
+relativeurls = true
 title = "Anh Hoang Duc"
 copyright = "&copy; 2017 Your Name"
 theme = "hugo-academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 #Relative urls
-#relativeurls = true
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
@@ -41,7 +41,7 @@ defaultContentLanguageInSubdir = false
 
   # Enable global LaTeX math rendering?
   #   If false, you can enable it locally on a per page basis.
-  math = false
+  math = true
 
   # Highlight.js options
   #   highlight
