--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "anhhoangduc.com"  # End your URL with a `/` trailing slash.
+#baseurl = "anhhoangduc.com"  # End your URL with a `/` trailing slash.
 relativeurls = true
 title = "Anh Hoang Duc"
 copyright = "&copy; 2017 Your Name"
