--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 #baseurl = "anhhoangduc.com"  # End your URL with a `/` trailing slash.
 relativeurls = true
 title = "Anh Hoang Duc"
-copyright = "&copy; 2017 Your Name"
+copyright = "&copy; 2017 Anh Hoang Duc"
 theme = "hugo-academic"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
@@ -24,7 +24,7 @@ defaultContentLanguageInSubdir = false
   name = "Anh Hoang Duc"
   role = "R enthusiast"
   organization = "VPBank"
-  organization_url = ""
+  organization_url = "https://www.vpbank.com.vn"
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "hoangducanh89@gmail.com"
