--- a/config.toml
+++ b/config.toml
@@ -22,9 +22,9 @@ defaultContentLanguageInSubdir = false
 
 [params]
   name = "Anh Hoang Duc"
-  role = "R enthusiast"
-  organization = "VPBank"
-  organization_url = "https://www.vpbank.com.vn"
+  role = "Business Analytics Professional  -  R Enthusiasist"
+  organization = "VPBank - RAnalytics"
+  organization_url = "https://www.ranalytics.vn"
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "hoangducanh89@gmail.com"
@@ -131,7 +131,7 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
-    link = "mailto:test@example.org"
+    link = "mailto:hoangducanh89@gmail.com"
 
   [[params.social]]
     icon = "twitter"
