--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ defaultContentLanguageInSubdir = false
 
 [params]
   name = "Anh Hoang Duc"
-  role = "Business Analytics Professional  -  R Enthusiasist"
+  role = "Business Analytics Professional  -  R Enthusiast"
   organization = "VPBank - RAnalytics"
   organization_url = "https://www.ranalytics.vn"
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
@@ -154,20 +154,20 @@ defaultContentLanguageInSubdir = false
   url = "#about"
   weight = 1
 
+#[[menu.main]]
+#  name = "Publications"
+#  url = "#publications_selected"
+#  weight = 2
+
 [[menu.main]]
-  name = "Publications"
-  url = "#publications_selected"
+  name = "Projects"
+  url = "#projects"
   weight = 2
 
 [[menu.main]]
   name = "Posts"
   url = "#posts"
   weight = 3
-
-[[menu.main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 4
 
 [[menu.main]]
   name = "Teaching"
