--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 disqusShortname = ""
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-104410794-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
