--- a/config.toml
+++ b/config.toml
@@ -173,11 +173,16 @@ defaultContentLanguageInSubdir = false
   name = "Teaching"
   url = "#teaching"
   weight = 5
+  
+[[menu.main]]
+  name = "Shiny apps"
+  url = "#shiny_app"
+  weight = 6
 
 [[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 6
+  weight = 7
 
 # Taxonomies.
 [taxonomies]
