--- a/config.toml
+++ b/config.toml
@@ -180,9 +180,14 @@ defaultContentLanguageInSubdir = false
   weight = 6
 
 [[menu.main]]
+  name = "CV"
+  url = "/cv/"
+  weight = 7
+
+[[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 7
+  weight = 8
 
 # Taxonomies.
 [taxonomies]
