--- a/config.toml
+++ b/config.toml
@@ -165,29 +165,25 @@ defaultContentLanguageInSubdir = false
   weight = 2
 
 [[menu.main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 3
-
-[[menu.main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 5
+  weight = 3
   
 [[menu.main]]
   name = "Shiny apps"
   url = "#shiny_app"
-  weight = 6
+  weight = 4
 
 [[menu.main]]
   name = "CV"
   url = "/cv/"
-  weight = 7
-
+  weight = 5
+  
 [[menu.main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 8
+  name = "Posts"
+  url = "/post/"
+  weight = 6
+
 
 # Taxonomies.
 [taxonomies]
