--- a/config.toml
+++ b/config.toml
@@ -180,8 +180,8 @@ defaultContentLanguageInSubdir = false
   weight = 5
   
 [[menu.main]]
-  name = "Posts"
-  url = "/post/"
+  name = "Blog"
+  url = "/blog/"
   weight = 6
 
 
