--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 #Relative urls
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "anhhoangduc-com"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = "UA-104410794-1"
