--- a/config.toml
+++ b/config.toml
@@ -134,6 +134,11 @@ defaultContentLanguageInSubdir = false
     link = "mailto:hoangducanh89@gmail.com"
 
   [[params.social]]
+    icon = "linkedin"
+    icon_pack = "fa"
+    link = "//linkedin.com/in/hoangducanh/"
+    
+  [[params.social]]
     icon = "twitter"
     icon_pack = "fa"
     link = "//twitter.com/anhhoangduc"
