--- a/config.toml
+++ b/config.toml
@@ -91,7 +91,7 @@ defaultContentLanguageInSubdir = false
 
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
-  custom_css = []
+  custom_css = ["/static/css/style.css"]
   custom_js  = []
 
   # Publication types.
