--- a/config.toml
+++ b/config.toml
@@ -91,8 +91,9 @@ defaultContentLanguageInSubdir = false
 
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
-  custom_css = ["/static/css/style.css"]
-  custom_js  = []
+  # Duc Anh note
+  #custom_css = []
+  #custom_js  = []
 
   # Publication types.
   #   Used to categorize publications.
