--- a/config.toml
+++ b/config.toml
@@ -92,7 +92,7 @@ defaultContentLanguageInSubdir = false
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
   # Duc Anh note
-  #custom_css = []
+  custom_css = ["style.css"]
   #custom_js  = []
 
   # Publication types.
