--- a/config.toml
+++ b/config.toml
@@ -92,7 +92,7 @@ defaultContentLanguageInSubdir = false
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
   # Duc Anh note
-  # custom_css = ["style.css"]
+ custom_css = ["../css/style.css"]
   #custom_js  = []
 
   # Publication types.
@@ -203,3 +203,5 @@ defaultContentLanguageInSubdir = false
 # Configure the English version of the website.
 [languages.en]
   languageCode = "en-us"
+  
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
